Try to make sure captions are never behind controls

--- a/skin/sass/state.sass
+++ b/skin/sass/state.sass
@@ -1,4 +1,7 @@
 .flowplayer
+  &.is-mouseover, &.is-paused
+    .fp-captions
+      bottom: 3em
   &.is-poster
     .fp-engine
       opacity: 0
